Replace .collect(Collectors.toList()) with .toList()
Use Stream.toList() (Java 16+) instead of .collect(Collectors.toList())
across the codebase. This simplifies the code and removes unnecessary
Collectors imports.

Where the returned list needs to be mutable (PatchGeneratorTest.createUser),
use new ArrayList<>(List.of(...)) instead.

Updated DefaultPatchHandler variable type from Collection<Object> to
List<Map<String, Object>> to match the stricter type inference of
Stream.toList().